Fix the revealer z-index property

--- a/frontend/src/pages/globals.css
+++ b/frontend/src/pages/globals.css
@@ -7,7 +7,7 @@
     transform-origin:  center top;
     background-color: black;
     pointer-events: none;
-    z-index: 2;
+    z-index: 99;
 }
 
 
